[package]
name = "dinglebit-log"
version = "1.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
description = "Logging implementation for the standard logger."
repository = "https://github.com/dinglebit/log.rs"
homepage = "https://www.dinglebit.com/"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/dinglebit-log"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dinglebit-terminal = "0.1.3"
hostname = "0.3.1"
lazy_static = "1.4.0"
log = { version = "0.4.14", features = ["std"] }
